Correct line possition on mobile version CSS

--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,10 @@
   }
 
   .line {
-    display: none;
+    order: 0;
+    width: 87.2vw;
+    height: 1px;
+    background-color: black;
   }
 
   .introimg {
